# mplcairo

./: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  CHANGELOG.rst  HACKING.rst  ISSUES.rst  LICENSE.txt  MANIFEST.in  README.rst  azure-pipelines.yml  dither.py  pyproject.toml  run-examples.py  run-mpl-test-suite.py  setup.cfg  setup.py  setup_mplcairo_pth.py  setupext.py
.github/: ISSUE_TEMPLATE.md
build-scripts/: build-manylinux-within-docker.sh  build-manylinux.sh
examples/: .gitignore  circle_markers.py  circle_markers_fast.py  combining_characters.py  hidpi_manual_test.sh  line_time_per_edge.py  marker_stamping.py  markevery.py  opentype_features.py  opentype_variations.py  operators.py  quadmesh.py  run_raqm_test_suite.py  square_markers.py  text_kerning.py  thin_line_antialiasing.py  time_drawing_per_element.py
ext/: _feature_tests.cpp  _macros.h  _mplcairo.cpp  _mplcairo.h  _os.cpp  _pattern_cache.cpp  _pattern_cache.h  _raqm.cpp  _unity_build.cpp  _util.cpp  _util.h
include/: README.rst
manylinux-build/: manylinux-build.sh  setup-docker.sh
mpl_cairo/: __init__.py  _version.py  base.py  gtk3.py  qt.py  qtopengl.py
mplcairo/: __init__.py  _version.py  base.py  gtk3.py  gtk3_native.py  qt.py
src/: _feature_tests.cpp  _macros.h  _mpl_cairo.cpp  _mpl_cairo.h  _mplcairo.cpp  _mplcairo.h  _os.cpp  _os.h  _pattern_cache.cpp  _pattern_cache.h  _raqm.cpp  _raqm.h  _util.cpp  _util.h
tests/: conftest.py  test_speed.py
tools/: build-macos-wheel.sh  build-manylinux-wheel.sh  build-manylinux.sh  build-osx-wheel.sh  build-raqm.sh  (+4 more)
(+24 files in other folders)
